--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,13 @@
+@import url("https://api.fontshare.com/v2/css?f[]=general-sans@1,2&display=swap");
 @import "tailwindcss";
-@import "@fontsource/fira-mono";
+
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
+
+@theme {
+  --color-bound: #52bddd;
+  --font-general: "General Sans", sans-serif;
+}
 
 .frame {
   /* @apply mx-auto px-8 md:px-12 lg:px-16 max-w-7xl; */
