--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,7 @@
 
 @theme {
   --color-bound: #52bddd;
+  --color-bone: #fffefd;
   --font-general: "General Sans", sans-serif;
   --font-satoshi: "Satoshi", sans-serif;
 }
